<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SettingsActivity">


    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/settings_textview_days_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/reminderDays" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/BirthdayReminderSwitch"/>
    <TextView
            android:text="@string/settings_textview_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/reminderDays"
            app:layout_constraintEnd_toStartOf="@+id/reminderTime" android:layout_marginEnd="20dp"/>
    <EditText
            android:layout_width="78dp"
            android:layout_height="40dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/reminderDays"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/textView" android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/BirthdayReminderSwitch"
            android:importantForAutofill="no" tools:ignore="LabelFor"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/reminderTime" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="20dp" android:importantForAutofill="no" tools:ignore="LabelFor"/>
    <Switch
            android:text="@string/settings_switch_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/birthdayAlarmSwitch"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>
    <Button
            android:text="@string/settings_button_systemsettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="340dp"/>
    <TextView
            android:text="@string/settings_headline_remind"
            android:layout_width="176dp"
            android:layout_height="40dp"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            android:textAlignment="center" android:textSize="24sp"/>
    <Switch
            android:text="@string/settings_switch_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BirthdayReminderSwitch" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/birthdayAlarmSwitch"/>
</android.support.constraint.ConstraintLayout>